# artix

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODOS.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-14-artix-phase1-implementation.md
src/: config.rs  delete.rs  delete_flow.rs  lib.rs  main.rs  model.rs  rules.rs
src/classify/: git.rs  mod.rs  ownership.rs  risk.rs
src/scan/: discover.rs  mod.rs  size.rs
src/ui/: mod.rs  theme.rs
tests/: browser_test.rs  config_cli_test.rs  delete_test.rs  delete_trash_regression_test.rs  git_command_output_suppression_test.rs  git_context_test.rs  ownership_test.rs  rules_test.rs  scan_pipeline_test.rs  ui_state_test.rs
tests/fixtures/: README.md
