[package]
name = "artix"
version = "0.1.1"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
directories = "6"
gix = { version = "0.81.0", features = ["excludes"] }
ignore = "0.4.25"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process"] }
toml = "0.9"
trash = "5"

[dev-dependencies]
tempfile = "3"
